# tianyan_a_share_trading

./: .gitignore  README.md  pyproject.toml
.hermes/: HANDOFF.md  SPEC.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/calendar/: route.ts
frontend/src/app/api/stocks/: route.ts
frontend/src/app/api/tweets/: route.ts
frontend/src/app/calendar/: page.tsx
frontend/src/app/data/daily/: page.tsx
frontend/src/app/data/finance/: page.tsx
frontend/src/app/data/fund-flow/: page.tsx
frontend/src/app/data/overview/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/components/calendar/: month-view.tsx
frontend/src/components/data/: DataTable.tsx
frontend/src/components/layout/: footer-bar.tsx  sidebar.tsx  top-nav.tsx
frontend/src/components/tweets/: tweet-detail.tsx  tweet-item.tsx
frontend/src/config/: data-sources.ts
frontend/src/lib/: db.ts  types.ts
scripts/: run_monitor.sh  run_web.sh
src/collectors/: __init__.py  config.yaml  fetch_capitalization_em_v1.0.py  fetch_capitalization_sina.py  fetch_daily_baostock.py  fetch_stocks.py  fetch_today_daily_kline_baostock_v1.3.py  fetch_trade_calendar_baostock_v1.0.py  fetch_valuation.py  init_db.py  uptrend_scanner.py
src/tweet_monitor/: __init__.py  __main__.py  config.py  db.py  monitor.py  pool.py  sync_cache.py
src/tweet_monitor/sources/: base.py  nitter.py
src/tweet_monitor/web/: __init__.py  __main__.py  dashboard.py
src/tweet_monitor/web/templates/: _tweet_list.html  index.html
(+15 files in other folders)
