[project]
name = "tianyan"
version = "0.2.0"
description = "天演 Tianyan — A股数据采集 + 推文监控 + 分析工具"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "httpx>=0.28",
    "psycopg2-binary>=2.9",
    "sshtunnel>=0.4",
    "baostock>=0.9",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tweet_monitor", "src/collectors"]
